sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:12: error: ')' expected but 'for' found.
		for (j <- getNombreValeurs()-2 to 0 by -1) {
                ^